<resources>
    <string name="app_name">Central Restaurant</string>
    <string name="login_email_hint">Ingresa tu correo</string>
    <string name="login_password_hint">Ingresa tu contraseña</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_register">Registrarse</string>
    <string name="login_enter_button">INGRESAR</string>
    <string name="logo_desc">Logo</string>
    <string name="client_button">Soy una persona</string>
    <string name="restaurant_button">Soy un restaurante</string>
    <string name="user_type">¿Qué tipo de usuario eres?</string>
    <string name="restaurant_register">Registro Restaurante</string>
    <string name="restaurant_name">Nombre</string>
    <string name="restaurant_type">Tipo</string>
    <string name="restaurant_address">Dirección</string>
    <string name="restaurant_phone">Teléfono</string>
    <string name="owner_name">Nombre Representante</string>
    <string name="owner_phone">Teléfono Representante</string>
    <string name="next">Siguiente</string>
    <string name="password_hint">Contraseña</string>
    <string name="repeat_password_hint">Confirmar Contraseña</string>
    <string name="client_name">Nombre</string>
    <string name="cellphone">Celular</string>
    <string name="client_register">Registro Cliente</string>
    <string name="birthdate">Fecha Nacimiento</string>
    <string name="email">Correo</string>
    <string name="clienteButton">Soy una persona</string>
    <string name="restaurantButton">Soy un restaurante</string>
    <string name="userTypeText">¿Qué tipo de usuario eres?</string>
    <string name="manageYour">Gestiona tus:</string>
    <string name="foods">Comidas</string>
    <string name="services">Servicios</string>
    <string name="productos">Productos</string>
    <string name="yourFoods">Tus comidas</string>
    <string name="add">Agregar</string>
    <string name="dataNewFood">Ingresa los datos de tu nuevo plato:</string>
    <string name="nameFood">Nombre del plato</string>
    <string name="price">Precio</string>
    <string name="description">Descripción</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="home">Home</string>
    <string name="register">Registrar</string>
    <string name="wrong_login">Correo o contraseña incorrecta</string>
    <string name="incomplete_fields">Ingresa todos los campos obligatorios</string>
    <string name="greetings">"Hola de nuevo, %1$s"</string>
</resources>